project(DesignPatternsDemo)
cmake_minimum_required(VERSION 2.8)

add_subdirectory(01-FactoryMethod)
add_subdirectory(02-AbstractFactory)
add_subdirectory(03-Builder)
add_subdirectory(04-Prototype)
add_subdirectory(05-Singleton)
add_subdirectory(06-Adapter)
add_subdirectory(07-Bridge)
add_subdirectory(08-Composite)
add_subdirectory(09-Decorator)