project(DesignPatternsDemo)
cmake_minimum_required(VERSION 2.8)

add_subdirectory(01-FactoryMethod)
add_subdirectory(02-AbstractFactory)
add_subdirectory(03-Builder)
add_subdirectory(04-Prototype)
add_subdirectory(05-Singleton)
add_subdirectory(06-Adapter)
add_subdirectory(07-Bridge)
add_subdirectory(08-Composite)
add_subdirectory(09-Decorator)
add_subdirectory(10-Facade)
add_subdirectory(11-Flyweight)
add_subdirectory(12-Proxy)
add_subdirectory(13-ChainOfResponsibility)
add_subdirectory(14-Command)
add_subdirectory(15-Interpreter)
add_subdirectory(16-Iterator)
add_subdirectory(17-Mediator)
add_subdirectory(18-Memento)
add_subdirectory(19-Observer)
add_subdirectory(20-State)
add_subdirectory(21-Strategy)
add_subdirectory(22-TemplateMethod)
add_subdirectory(23-Visitor)